tests/format/scss/_errors_/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`less-syntax.less [scss] format 1`] = `
"CssSyntaxError: Unknown word .bordered (1:4)
> 1 | a {.bordered();}
    |    ^
  2 |
Cause: <css input>:1:4: Unknown word .bordered"
`;
